--- a/cms/src/main/resources/application.properties
+++ b/cms/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:alcoholDB
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=mie350user
-spring.datasource.password=mie350password
+spring.datasource.username=mie350student
+spring.datasource.password=mie350student
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
-server.port=8085
+server.port=8090
